logs/futuregrid.cloud.metric.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/futuregrid'...
Listing './lib/python3.5/site-packages/futuregrid/cloud'...
Listing './lib/python3.5/site-packages/futuregrid/cloud/metric'...
Compiling './lib/python3.5/site-packages/futuregrid/cloud/metric/FGAnalyzer.py'...
***   File "./lib/python3.5/site-packages/futuregrid/cloud/metric/FGAnalyzer.py", line 93
    print "from and to date not specified."
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/futuregrid/cloud/metric/FGEucaGatherLogFiles.py'...
***   File "./lib/python3.5/site-packages/futuregrid/cloud/metric/FGEucaGatherLogFiles.py", line 282
    print " renaming "  + old_name
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/futuregrid/cloud/metric/FGEucaMetricsDB.py'...
***   File "./lib/python3.5/site-packages/futuregrid/cloud/metric/FGEucaMetricsDB.py", line 32
    print cfgfile + " does not exist"
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/futuregrid/cloud/metric/FGParser.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (FGParser.py, line 114)
Listing './lib/python3.5/site-packages/futuregrid.cloud.metric-2.1.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
